# cArtProject

./: ArtConfig.h  ArtConfig.h.in  CMakeLists.txt  README.md  main.cpp  sfml-app  splice.cpp  splice.hpp
